tests/gen-test/test_out/compile-time-parse-out.txt
error: expected '\n' | ';' but got ','
 --> compile-time\root.ctl:1:96
  |
1 | fn sub(a : uint, b : uint) -> uint => a - b ; break ; #[entry] ; fn main -> uint => const sub(1, 1) ;
  |                                                                                                ^ token located here
  |
  = info: list -> item -> function definition -> function body -> expr -> unit expr -> comp time run -> expr -> unit expr -> call -> list

